[project]
name = "docassemblecli"
version = "0.0.25"
authors = [
  { name = "Jonathan Pyle", email = "jhpyle@gmail.com" },
]
description = "CLI utilities for using docassemble"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml",
  "requests",
  "packaging",
  "watchdog",
  "tomli",
  "tomli_w",
]

[project.urls]
Homepage = "https://github.com/jhpyle/docassemblecli"
"Bug Tracker" = "https://github.com/jhpyle/docassemblecli/issues"

[project.scripts]
dainstall = "docassemblecli.commands:dainstall"
dacreate = "docassemblecli.commands:dacreate"
dadownload = "docassemblecli.commands:dadownload"
dauninstall = "docassemblecli.commands:dauninstall"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
ignore = ["E722", "E226", "E24", "E501", "C901", "E305", "E306"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "line-too-long",
    "bare-except",
    "broad-exception-caught",
    "too-many-branches",
    "too-many-statements",
    "import-outside-toplevel",
    "too-many-boolean-expressions",
    "too-many-locals",
    "too-many-return-statements",
    "too-few-public-methods",
    "too-many-lines",
    "too-many-nested-blocks",
]
